workloads/pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  revisionHistoryLimit: 3
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      tolerations:
        - key: pi
          operator: Equal
          value: "true"
          effect: NoSchedule
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: workload-type
                    operator: In
                    values:
                      - general
      containers:
        - name: pihole
          image: docker.io/pihole/pihole:2026.07.2
          ports:
            - containerPort: 53
              protocol: UDP
              name: dns-udp
            - containerPort: 53
              protocol: TCP
              name: dns-tcp
            - containerPort: 80
              protocol: TCP
              name: http
          volumeMounts:
            - name: pihole-config
              mountPath: /etc/pihole
            - name: dnsmasq-config
              mountPath: /etc/dnsmasq.d
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
      volumes:
        - name: pihole-config
          persistentVolumeClaim:
            claimName: pihole-config-lh
        - name: dnsmasq-config
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-lh
