workloads/pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole
  labels:
    app: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-dns
  labels:
    app: pihole
  annotations:
    metallb.io/loadBalancerIPs: "192.168.6.27,fd00:6::27"
spec:
  type: LoadBalancer
  allocateLoadBalancerNodePorts: false
  ipFamilyPolicy: PreferDualStack
  ipFamilies: [IPv4, IPv6]
  selector:
    app: pihole
  ports:
    - port: 53
      targetPort: 53
      protocol: UDP
      name: dns-udp
    - port: 53
      targetPort: 53
      protocol: TCP
      name: dns-tcp
