workloads/pihole/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      sectionName: pihole-ts-2143-https
  hostnames:
    - pihole.ts.2143.me
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: lan-only
      backendRefs:
        - name: pihole
          port: 80
